# sign-speech-bridge

./: .env.example  .gitignore  README.md  Skill.md  package.json  pnpm-lock.yaml
agent/: .env.example  instructions.md  main.py  pyproject.toml  requirements.txt
app/: globals.css  layout.tsx  page.tsx  stream-theme.css
app/[callId]/: page.tsx
app/api/stream-token/: route.ts
components/: call-ui.tsx  join-call.tsx  live-captions.tsx  lobby.tsx
lib/: stream.ts
